--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
       <div class="inti">
         <div class="card" style="width: 18rem;">
-          <img src="plt.jpg" class="card-img-top" alt="...">
+          <img src="plt.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">I had completed this Virtual internship from AICTE-EDUSKILL platform for a period of 10weeks</p>
             <a href="plt.pdf" class="btn btn-primary">CERTIFICATE<i class="fa-solid fa-up-right-from-square"></i></a>
