--- a/index.html
+++ b/index.html
@@ -178,9 +178,10 @@
        
 <div class="row social" >
   <a target = "blank" href = 'https://github.com/SaiKumar960'><i class="fab fa-github"></i></a>
+  <a target = "blank" href = 'https://www.coursera.org/user/c7522cef052730087ccff07ca77e0036'><i class="fab fa-coursera"></i></a>
   <a target = "blank" href = 'https://wa.me/9347036519'><i class="fab fa-whatsapp"></i></a>
   <a target = "blank" href = 'https://www.linkedin.com/in/saikumar-kota-1770b8231?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app'><i class="fab fa-linkedin"></i></a>
-  <a target = "blank" href='https://x.com/saikumarkota123?s=09' ><i class="fab fa-twitter"></i></a>
+  <a target = "blank" href='https://x.com/saikumarkota123?s=09' ><i class="fab fa-x"></i></a>
   <a target = "blank" href='https://www.facebook.com/saikumar.kota.142?'><i class='fab fa-facebook'></i></a>
   <a target = "blank" href='https://www.instagram.com/saikumar_kota_960?igsh=MTNlN2p1aGQ0NTFoaA=='><i class='fab fa-instagram'></i></a></section>
 </div>
