--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
           </div>
         </div>
       </div>
+        <div class="inti">
+      <div class="card" style="width: 18rem;">
+        <img src="google_dev.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">I had completed this Virtual internship from AICTE-EDUSKILL platform for a period of 10weeks</p>
+          <a href="google.pdf" class="btn btn-primary">CERTIFICATE<i class="fa-solid fa-up-right-from-square"></i></a>
+        </div>
+      </div>
       
     </section>
 
