--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
         <div class="inti">
       <div class="card" style="width: 11rem;">
-        <img src="google_dev.png" class="card-img-top" alt="...">
+        <img src="01.png" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">I had completed this Virtual internship from AICTE-EDUSKILL platform for a period of 10weeks</p>
           <a href="google.pdf" class="btn btn-primary">CERTIFICATE<i class="fa-solid fa-up-right-from-square"></i></a>
