--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <h2>Internships</h2>
       <div class="inti">
       <div class="card" style="width: 18rem;">
-        <img src="aws.jpg" class="card-img-top" alt="...">
+        <img src="02.png" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">I had completed this Virtual internship from AICTE-EDUSKILL platform for a period of 10weeks</p>
           <a href="aws.pdf" class="btn btn-primary">CERTIFICATE<i class="fa-solid fa-up-right-from-square"></i></a>
