--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
       
         <p><i class="fa-solid fa-envelope"></i> Email: saikumar.kota960@gmail.com</p>
         <p><i class="fa-solid fa-square-phone"></i> Phone: 9347036519</p>
+footer>
+<p>Copyright © 2023 KOTA SAI KUMAR</p>
+</footer>
       </div>
       <div class="main" >
         <section id="Social connect">
@@ -203,9 +206,6 @@
     sidemeu.style.right="-200px";
   }
 </script>
-<footer>
-<p>Copyright © 2023 KOTA SAI KUMAR</p>
-</footer>
 
 
 
