--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       
         <p><i class="fa-solid fa-envelope"></i> Email: saikumar.kota960@gmail.com</p>
         <p><i class="fa-solid fa-square-phone"></i> Phone: 9347036519</p>
-footer>
+<footer>
 <p>Copyright © 2023 KOTA SAI KUMAR</p>
 </footer>
       </div>
